@@ -120,7 +120,9 @@ JSDOC.Lang.matching.names = {
 	"LEFT_CURLY": "RIGHT_CURLY",
 	"RIGHT_CURLY": "LEFT_CURLY",
 	"LEFT_BRACE": "RIGHT_BRACE",
-	"RIGHT_BRACE": "LEFT_BRACE"
+	"RIGHT_BRACE": "LEFT_BRACE",
+	"LEFT_BRACKET": "RIGHT_BRACKET",
+	"RIGHT_BRACKET": "LEFT_BRACKET"
 }
 
 JSDOC.Lang.isNumber = function(str) {
